--- a/screen/W12.glade
+++ b/screen/W12.glade
@@ -3481,7 +3481,7 @@
             <class>GtkLabel</class>
             <name>label5</name>
             <x>30</x>
-            <y>248</y>
+            <y>246</y>
             <width>140</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3553,7 +3553,7 @@
             <class>GtkPandaCombo</class>
             <name>FRAME_JIBAI_N_COMBO</name>
             <x>190</x>
-            <y>302</y>
+            <y>300</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3590,7 +3590,7 @@
             <class>GtkPandaCombo</class>
             <name>FRAME_JIBAI_COMBO</name>
             <x>190</x>
-            <y>270</y>
+            <y>268</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3657,7 +3657,7 @@
             <class>GtkPandaCombo</class>
             <name>JIBAIPRTKBN_N_COMBO</name>
             <x>190</x>
-            <y>394</y>
+            <y>396</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3731,7 +3731,7 @@
             <class>GtkLabel</class>
             <name>label501</name>
             <x>120</x>
-            <y>362</y>
+            <y>364</y>
             <width>70</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3749,7 +3749,7 @@
             <class>GtkLabel</class>
             <name>label500</name>
             <x>30</x>
-            <y>340</y>
+            <y>342</y>
             <width>140</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3785,7 +3785,7 @@
             <class>GtkLabel</class>
             <name>label502</name>
             <x>120</x>
-            <y>394</y>
+            <y>396</y>
             <width>70</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3821,7 +3821,7 @@
             <class>GtkLabel</class>
             <name>label601</name>
             <x>120</x>
-            <y>436</y>
+            <y>438</y>
             <width>70</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3839,7 +3839,7 @@
             <class>GtkLabel</class>
             <name>label602</name>
             <x>120</x>
-            <y>468</y>
+            <y>470</y>
             <width>70</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3894,7 +3894,7 @@
             <class>GtkPandaCombo</class>
             <name>JIBAIPRTKBN_COMBO</name>
             <x>190</x>
-            <y>362</y>
+            <y>364</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3931,7 +3931,7 @@
             <class>GtkPandaCombo</class>
             <name>JIBAIPRTKBN1_COMBO</name>
             <x>190</x>
-            <y>436</y>
+            <y>438</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3968,7 +3968,7 @@
             <class>GtkPandaCombo</class>
             <name>JIBAIPRTKBN1_N_COMBO</name>
             <x>190</x>
-            <y>468</y>
+            <y>470</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -3987,6 +3987,80 @@
               <has_focus>False</has_focus>
               <editable>True</editable>
               <text></text>
+              <input_mode>XIM</input_mode>
+              <xim_enabled>False</xim_enabled>
+              <signal>
+                <name>changed</name>
+                <handler>entry_changed</handler>
+                <data>CHANGED</data>
+              </signal>
+              <signal>
+                <name>activate</name>
+                <handler>send_event</handler>
+                <data>ACTIVATE</data>
+              </signal>
+            </widget>
+          </widget>
+          <widget>
+            <class>GtkPandaCombo</class>
+            <name>JIBAI_FRACTION_KBN1_COMBO</name>
+            <x>190</x>
+            <y>534</y>
+            <width>286</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <border_width>0</border_width>
+            <items></items>
+            <case_sensitive>False</case_sensitive>
+            <use_arrows>True</use_arrows>
+            <widget>
+              <class>GtkPandaEntry</class>
+              <child_name>GtkPandaCombo:entry</child_name>
+              <name>JIBAI_FRACTION_KBN1</name>
+              <sensitive>True</sensitive>
+              <can_focus>True</can_focus>
+              <has_focus>False</has_focus>
+              <editable>True</editable>
+              <text>2 医療機関情報を参照（患者請求時のみ）</text>
+              <input_mode>XIM</input_mode>
+              <xim_enabled>False</xim_enabled>
+              <signal>
+                <name>changed</name>
+                <handler>entry_changed</handler>
+                <data>CHANGED</data>
+              </signal>
+              <signal>
+                <name>activate</name>
+                <handler>send_event</handler>
+                <data>ACTIVATE</data>
+              </signal>
+            </widget>
+          </widget>
+          <widget>
+            <class>GtkPandaCombo</class>
+            <name>JIBAI_FRACTION_KBN2_COMBO</name>
+            <x>190</x>
+            <y>566</y>
+            <width>286</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <border_width>0</border_width>
+            <items></items>
+            <case_sensitive>False</case_sensitive>
+            <use_arrows>True</use_arrows>
+            <widget>
+              <class>GtkPandaEntry</class>
+              <child_name>GtkPandaCombo:entry</child_name>
+              <name>JIBAI_FRACTION_KBN2</name>
+              <sensitive>True</sensitive>
+              <can_focus>True</can_focus>
+              <has_focus>False</has_focus>
+              <editable>True</editable>
+              <text>2 医療機関情報を参照（患者請求時のみ）</text>
               <input_mode>XIM</input_mode>
               <xim_enabled>False</xim_enabled>
               <signal>
@@ -4041,7 +4115,7 @@
             <class>GtkLabel</class>
             <name>label525</name>
             <x>30</x>
-            <y>208</y>
+            <y>204</y>
             <width>140</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -4077,7 +4151,7 @@
             <class>GtkPandaCombo</class>
             <name>COMMENT_ROU_COMBO</name>
             <x>190</x>
-            <y>211</y>
+            <y>204</y>
             <width>208</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -4188,7 +4262,7 @@
             <class>GtkLabel</class>
             <name>label25</name>
             <x>60</x>
-            <y>362</y>
+            <y>364</y>
             <width>65</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -4206,7 +4280,7 @@
             <class>GtkLabel</class>
             <name>label26</name>
             <x>60</x>
-            <y>436</y>
+            <y>438</y>
             <width>65</width>
             <height>24</height>
             <sensitive>True</sensitive>
@@ -4217,6 +4291,63 @@
             <xpad>0</xpad>
             <ypad>0</ypad>
             <label>新様式</label>
+            <justify>GTK_JUSTIFY_LEFT</justify>
+            <wrap>False</wrap>
+          </widget>
+          <widget>
+            <class>GtkLabel</class>
+            <name>label32</name>
+            <x>30</x>
+            <y>512</y>
+            <width>200</width>
+            <height>24</height>
+            <visible>True</visible>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <xalign>0</xalign>
+            <yalign>0.5</yalign>
+            <xpad>0</xpad>
+            <ypad>0</ypad>
+            <label>自賠責・請求金額欄端数処理区分</label>
+            <justify>GTK_JUSTIFY_LEFT</justify>
+            <wrap>False</wrap>
+          </widget>
+          <widget>
+            <class>GtkLabel</class>
+            <name>label33</name>
+            <x>120</x>
+            <y>534</y>
+            <width>70</width>
+            <height>24</height>
+            <visible>True</visible>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <xalign>0</xalign>
+            <yalign>0.5</yalign>
+            <xpad>0</xpad>
+            <ypad>0</ypad>
+            <label>自賠責</label>
+            <justify>GTK_JUSTIFY_LEFT</justify>
+            <wrap>False</wrap>
+          </widget>
+          <widget>
+            <class>GtkLabel</class>
+            <name>label34</name>
+            <x>120</x>
+            <y>566</y>
+            <width>70</width>
+            <height>24</height>
+            <visible>True</visible>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <xalign>0</xalign>
+            <yalign>0.5</yalign>
+            <xpad>0</xpad>
+            <ypad>0</ypad>
+            <label>第三者行為</label>
             <justify>GTK_JUSTIFY_LEFT</justify>
             <wrap>False</wrap>
           </widget>
