--- a/screen/W12.glade
+++ b/screen/W12.glade
@@ -2157,6 +2157,43 @@
             </widget>
           </widget>
           <widget>
+            <class>GtkPandaCombo</class>
+            <name>GENBUTU_ICHIBU_COMBO</name>
+            <x>190</x>
+            <y>56</y>
+            <width>288</width>
+            <height>24</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <border_width>0</border_width>
+            <items></items>
+            <case_sensitive>False</case_sensitive>
+            <use_arrows>True</use_arrows>
+            <widget>
+              <class>GtkPandaEntry</class>
+              <child_name>GtkPandaCombo:entry</child_name>
+              <name>GENBUTU_ICHIBU</name>
+              <sensitive>True</sensitive>
+              <can_focus>True</can_focus>
+              <has_focus>False</has_focus>
+              <editable>True</editable>
+              <text>0 上限１円単位の１０円未満四捨五入なし</text>
+              <input_mode>ASCII</input_mode>
+              <xim_enabled>False</xim_enabled>
+              <signal>
+                <name>changed</name>
+                <handler>entry_changed</handler>
+                <data>CHANGED</data>
+              </signal>
+              <signal>
+                <name>activate</name>
+                <handler>send_event</handler>
+                <data>ACTIVATE</data>
+              </signal>
+            </widget>
+          </widget>
+          <widget>
             <class>GtkLabel</class>
             <name>labe3217</name>
             <x>30</x>
@@ -2171,6 +2208,25 @@
             <xpad>0</xpad>
             <ypad>0</ypad>
             <label>保険履歴記載区分</label>
+            <justify>GTK_JUSTIFY_LEFT</justify>
+            <wrap>False</wrap>
+          </widget>
+          <widget>
+            <class>GtkLabel</class>
+            <name>label3218</name>
+            <x>30</x>
+            <y>50</y>
+            <width>150</width>
+            <height>48</height>
+            <sensitive>True</sensitive>
+            <can_focus>False</can_focus>
+            <has_focus>False</has_focus>
+            <xalign>0</xalign>
+            <yalign>0.5</yalign>
+            <xpad>0</xpad>
+            <ypad>0</ypad>
+            <label>法別２４・７９
+現物給付一部負担金記載　　　　　記載</label>
             <justify>GTK_JUSTIFY_LEFT</justify>
             <wrap>False</wrap>
           </widget>
