--- a/screen/W13.glade
+++ b/screen/W13.glade
@@ -362,7 +362,7 @@
         <name>RSIIRYOCDN</name>
         <x>196</x>
         <y>60</y>
-        <width>292</width>
+        <width>200</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>True</can_focus>
@@ -387,7 +387,7 @@
         <class>GtkPandaEntry</class>
         <name>SONSHOUKBN1</name>
         <x>492</x>
-        <y>440</y>
+        <y>320</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -413,7 +413,7 @@
         <class>GtkPandaEntry</class>
         <name>SONSHOUKBN2</name>
         <x>536</x>
-        <y>440</y>
+        <y>320</y>
         <width>20</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -439,7 +439,7 @@
         <class>GtkPandaEntry</class>
         <name>SONSHOUNAME</name>
         <x>560</x>
-        <y>440</y>
+        <y>320</y>
         <width>435</width>
         <height>25</height>
         <sensitive>True</sensitive>
@@ -465,7 +465,7 @@
         <class>GtkNumberEntry</class>
         <name>KSNRATE</name>
         <x>196</x>
-        <y>300</y>
+        <y>276</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -488,7 +488,7 @@
         <class>GtkButton</class>
         <name>BTNDEL</name>
         <x>908</x>
-        <y>156</y>
+        <y>36</y>
         <width>48</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -510,7 +510,7 @@
         <class>GtkButton</class>
         <name>BTNPREV</name>
         <x>804</x>
-        <y>156</y>
+        <y>36</y>
         <width>48</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -532,7 +532,7 @@
         <class>GtkButton</class>
         <name>BTNNEXT</name>
         <x>856</x>
-        <y>156</y>
+        <y>36</y>
         <width>48</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -554,7 +554,7 @@
         <class>GtkButton</class>
         <name>BTNCHG</name>
         <x>960</x>
-        <y>156</y>
+        <y>36</y>
         <width>48</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -576,7 +576,7 @@
         <class>GtkNumberEntry</class>
         <name>SYUTENTANKA_G</name>
         <x>232</x>
-        <y>372</y>
+        <y>324</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -599,7 +599,7 @@
         <class>GtkNumberEntry</class>
         <name>YKZTENTANKA_G</name>
         <x>232</x>
-        <y>396</y>
+        <y>348</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -622,7 +622,7 @@
         <class>GtkNumberEntry</class>
         <name>KOMUTENTANKA</name>
         <x>196</x>
-        <y>564</y>
+        <y>468</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -738,7 +738,7 @@
         <name>ROUKAISU_COMBO</name>
         <x>196</x>
         <y>108</y>
-        <width>100</width>
+        <width>120</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>False</can_focus>
@@ -846,7 +846,7 @@
       <widget>
         <class>GtkPandaCombo</class>
         <name>TAXKBN_COMBO</name>
-        <x>192</x>
+        <x>196</x>
         <y>180</y>
         <width>136</width>
         <height>24</height>
@@ -901,27 +901,9 @@
       </widget>
       <widget>
         <class>GtkLabel</class>
-        <name>label243</name>
-        <x>32</x>
-        <y>280</y>
-        <width>164</width>
-        <height>22</height>
-        <sensitive>True</sensitive>
-        <can_focus>False</can_focus>
-        <has_focus>False</has_focus>
-        <xalign>0</xalign>
-        <yalign>0.5</yalign>
-        <xpad>0</xpad>
-        <ypad>0</ypad>
-        <label>＜自賠責・労災準拠＞</label>
-        <justify>GTK_JUSTIFY_LEFT</justify>
-        <wrap>False</wrap>
-      </widget>
-      <widget>
-        <class>GtkLabel</class>
         <name>label223</name>
         <x>244</x>
-        <y>300</y>
+        <y>276</y>
         <width>28</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -939,8 +921,8 @@
         <class>GtkLabel</class>
         <name>label225</name>
         <x>32</x>
-        <y>324</y>
-        <width>92</width>
+        <y>300</y>
+        <width>160</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>False</can_focus>
@@ -949,25 +931,7 @@
         <yalign>0.5</yalign>
         <xpad>0</xpad>
         <ypad>0</ypad>
-        <label>食事療養費</label>
-        <justify>GTK_JUSTIFY_LEFT</justify>
-        <wrap>False</wrap>
-      </widget>
-      <widget>
-        <class>GtkLabel</class>
-        <name>label245</name>
-        <x>32</x>
-        <y>352</y>
-        <width>164</width>
-        <height>22</height>
-        <sensitive>True</sensitive>
-        <can_focus>False</can_focus>
-        <has_focus>False</has_focus>
-        <xalign>0</xalign>
-        <yalign>0.5</yalign>
-        <xpad>0</xpad>
-        <ypad>0</ypad>
-        <label>＜自賠責・健保準拠＞</label>
+        <label>　　　　　　食事療養費</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
       </widget>
@@ -975,8 +939,8 @@
         <class>GtkLabel</class>
         <name>label246</name>
         <x>32</x>
-        <y>372</y>
-        <width>96</width>
+        <y>324</y>
+        <width>160</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>False</can_focus>
@@ -985,7 +949,7 @@
         <yalign>0.5</yalign>
         <xpad>0</xpad>
         <ypad>0</ypad>
-        <label>技術点単価　</label>
+        <label>【健保準拠】技術点単価</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
       </widget>
@@ -993,8 +957,8 @@
         <class>GtkLabel</class>
         <name>label247</name>
         <x>32</x>
-        <y>396</y>
-        <width>96</width>
+        <y>348</y>
+        <width>160</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>False</can_focus>
@@ -1003,7 +967,7 @@
         <yalign>0.5</yalign>
         <xpad>0</xpad>
         <ypad>0</ypad>
-        <label>薬剤等点単価</label>
+        <label>　　　　　　薬剤等点単価</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
       </widget>
@@ -1011,7 +975,7 @@
         <class>GtkLabel</class>
         <name>label248</name>
         <x>276</x>
-        <y>372</y>
+        <y>324</y>
         <width>64</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1029,7 +993,7 @@
         <class>GtkLabel</class>
         <name>label250</name>
         <x>32</x>
-        <y>424</y>
+        <y>376</y>
         <width>148</width>
         <height>22</height>
         <sensitive>True</sensitive>
@@ -1047,7 +1011,7 @@
         <class>GtkPandaCombo</class>
         <name>KOMUKBN_COMBO</name>
         <x>196</x>
-        <y>444</y>
+        <y>396</y>
         <width>136</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1139,7 +1103,7 @@
         <class>GtkLabel</class>
         <name>label251</name>
         <x>32</x>
-        <y>444</y>
+        <y>396</y>
         <width>96</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1157,7 +1121,7 @@
         <class>GtkLabel</class>
         <name>label240</name>
         <x>32</x>
-        <y>592</y>
+        <y>544</y>
         <width>156</width>
         <height>22</height>
         <sensitive>True</sensitive>
@@ -1175,7 +1139,7 @@
         <class>GtkLabel</class>
         <name>label241</name>
         <x>32</x>
-        <y>612</y>
+        <y>564</y>
         <width>120</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1193,8 +1157,8 @@
         <class>GtkPandaCombo</class>
         <name>RSIPRT_COMBO</name>
         <x>196</x>
-        <y>612</y>
-        <width>100</width>
+        <y>564</y>
+        <width>136</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>False</can_focus>
@@ -1231,7 +1195,7 @@
         <class>GtkLabel</class>
         <name>label258</name>
         <x>32</x>
-        <y>660</y>
+        <y>612</y>
         <width>120</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1249,7 +1213,7 @@
         <class>GtkLabel</class>
         <name>label257</name>
         <x>32</x>
-        <y>640</y>
+        <y>592</y>
         <width>344</width>
         <height>22</height>
         <sensitive>True</sensitive>
@@ -1266,7 +1230,7 @@
       <widget>
         <class>GtkPandaCombo</class>
         <name>KIZAITAXKBN_COMBO</name>
-        <x>192</x>
+        <x>196</x>
         <y>204</y>
         <width>120</width>
         <height>24</height>
@@ -1304,7 +1268,7 @@
       <widget>
         <class>GtkPandaCombo</class>
         <name>KOTEIKBN_COMBO</name>
-        <x>192</x>
+        <x>196</x>
         <y>228</y>
         <width>120</width>
         <height>24</height>
@@ -1342,7 +1306,7 @@
       <widget>
         <class>GtkPandaCombo</class>
         <name>JBISKYKBN_COMBO</name>
-        <x>192</x>
+        <x>196</x>
         <y>252</y>
         <width>120</width>
         <height>24</height>
@@ -1381,7 +1345,7 @@
         <class>GtkLabel</class>
         <name>label256</name>
         <x>32</x>
-        <y>468</y>
+        <y>420</y>
         <width>152</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1399,7 +1363,7 @@
         <class>GtkPandaCombo</class>
         <name>KOMUSKYKBN_COMBO</name>
         <x>196</x>
-        <y>468</y>
+        <y>420</y>
         <width>120</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1437,8 +1401,8 @@
         <class>GtkLabel</class>
         <name>label222</name>
         <x>32</x>
-        <y>300</y>
-        <width>48</width>
+        <y>276</y>
+        <width>160</width>
         <height>24</height>
         <sensitive>True</sensitive>
         <can_focus>False</can_focus>
@@ -1447,7 +1411,7 @@
         <yalign>0.5</yalign>
         <xpad>0</xpad>
         <ypad>0</ypad>
-        <label>加算率　　</label>
+        <label>【労災準拠】加算率</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
       </widget>
@@ -1455,7 +1419,7 @@
         <class>GtkLabel</class>
         <name>label252</name>
         <x>32</x>
-        <y>544</y>
+        <y>468</y>
         <width>164</width>
         <height>22</height>
         <sensitive>True</sensitive>
@@ -1465,51 +1429,15 @@
         <yalign>0.5</yalign>
         <xpad>0</xpad>
         <ypad>0</ypad>
-        <label>＜公務災害・健保準拠＞</label>
-        <justify>GTK_JUSTIFY_LEFT</justify>
-        <wrap>False</wrap>
-      </widget>
-      <widget>
-        <class>GtkLabel</class>
-        <name>label259</name>
-        <x>32</x>
-        <y>496</y>
-        <width>164</width>
-        <height>22</height>
-        <sensitive>True</sensitive>
-        <can_focus>False</can_focus>
-        <has_focus>False</has_focus>
-        <xalign>0</xalign>
-        <yalign>0.5</yalign>
-        <xpad>0</xpad>
-        <ypad>0</ypad>
-        <label>＜公務災害・労災準拠＞</label>
-        <justify>GTK_JUSTIFY_LEFT</justify>
-        <wrap>False</wrap>
-      </widget>
-      <widget>
-        <class>GtkLabel</class>
-        <name>label260</name>
-        <x>32</x>
-        <y>564</y>
-        <width>164</width>
-        <height>24</height>
-        <sensitive>True</sensitive>
-        <can_focus>False</can_focus>
-        <has_focus>False</has_focus>
-        <xalign>0</xalign>
-        <yalign>0.5</yalign>
-        <xpad>0</xpad>
-        <ypad>0</ypad>
-        <label>　　　　　　単価</label>
+        <label>【健保準拠】単価</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
       </widget>
       <widget>
         <class>GtkPandaCombo</class>
         <name>KYUGYOPRTKBN_COMBO</name>
-        <x>164</x>
-        <y>660</y>
+        <x>196</x>
+        <y>612</y>
         <width>264</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1546,7 +1474,7 @@
       <widget>
         <class>GtkPandaCombo</class>
         <name>JIBAIKBN_COMBO</name>
-        <x>192</x>
+        <x>196</x>
         <y>156</y>
         <width>136</width>
         <height>24</height>
@@ -1585,7 +1513,7 @@
         <class>GtkPandaCombo</class>
         <name>SKJKBN_COMBO</name>
         <x>196</x>
-        <y>324</y>
+        <y>300</y>
         <width>172</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1661,7 +1589,7 @@
         <class>GtkPandaCombo</class>
         <name>KOMURSITANKAKBN_COMBO</name>
         <x>196</x>
-        <y>516</y>
+        <y>444</y>
         <width>200</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1699,7 +1627,7 @@
         <class>GtkLabel</class>
         <name>label261</name>
         <x>32</x>
-        <y>516</y>
+        <y>444</y>
         <width>164</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1709,7 +1637,7 @@
         <yalign>0.5</yalign>
         <xpad>0</xpad>
         <ypad>0</ypad>
-        <label>　　　　　　単価</label>
+        <label>【労災準拠】単価</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
       </widget>
@@ -1717,7 +1645,7 @@
         <class>GtkScrolledWindow</class>
         <name>scrolledwindow6</name>
         <x>492</x>
-        <y>468</y>
+        <y>348</y>
         <width>525</width>
         <height>230</height>
         <sensitive>True</sensitive>
@@ -1791,7 +1719,7 @@
         <class>GtkHSeparator</class>
         <name>hseparator3</name>
         <x>492</x>
-        <y>416</y>
+        <y>296</y>
         <width>56</width>
         <height>20</height>
         <sensitive>True</sensitive>
@@ -1803,7 +1731,7 @@
         <class>GtkLabel</class>
         <name>label221</name>
         <x>556</x>
-        <y>416</y>
+        <y>296</y>
         <width>64</width>
         <height>20</height>
         <sensitive>True</sensitive>
@@ -1821,7 +1749,7 @@
         <class>GtkHSeparator</class>
         <name>hseparator4</name>
         <x>624</x>
-        <y>416</y>
+        <y>296</y>
         <width>391</width>
         <height>20</height>
         <sensitive>True</sensitive>
@@ -1833,7 +1761,7 @@
         <class>GtkScrolledWindow</class>
         <name>scrolledwindow7</name>
         <x>488</x>
-        <y>184</y>
+        <y>64</y>
         <width>528</width>
         <height>220</height>
         <sensitive>True</sensitive>
@@ -1937,7 +1865,7 @@
         <class>GtkLabel</class>
         <name>LBLKIZAILST</name>
         <x>488</x>
-        <y>156</y>
+        <y>36</y>
         <width>300</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1955,7 +1883,7 @@
         <class>GtkNumberEntry</class>
         <name>KOMURSITANKA</name>
         <x>404</x>
-        <y>516</y>
+        <y>444</y>
         <width>44</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1978,7 +1906,7 @@
         <class>GtkLabel</class>
         <name>label249</name>
         <x>384</x>
-        <y>372</y>
+        <y>324</y>
         <width>28</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -1996,7 +1924,7 @@
         <class>GtkLabel</class>
         <name>label262</name>
         <x>244</x>
-        <y>564</y>
+        <y>468</y>
         <width>28</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2014,7 +1942,7 @@
         <class>GtkLabel</class>
         <name>LBLKOMURSIYEN</name>
         <x>456</x>
-        <y>516</y>
+        <y>444</y>
         <width>28</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2032,7 +1960,7 @@
         <class>GtkLabel</class>
         <name>label3</name>
         <x>196</x>
-        <y>372</y>
+        <y>324</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2050,7 +1978,7 @@
         <class>GtkNumberEntry</class>
         <name>SYUTENTANKA_N</name>
         <x>340</x>
-        <y>372</y>
+        <y>324</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2073,7 +2001,7 @@
         <class>GtkNumberEntry</class>
         <name>YKZTENTANKA_N</name>
         <x>340</x>
-        <y>396</y>
+        <y>348</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2096,7 +2024,7 @@
         <class>GtkLabel</class>
         <name>label4</name>
         <x>196</x>
-        <y>396</y>
+        <y>348</y>
         <width>40</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2114,7 +2042,7 @@
         <class>GtkLabel</class>
         <name>label5</name>
         <x>276</x>
-        <y>396</y>
+        <y>348</y>
         <width>64</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2132,7 +2060,7 @@
         <class>GtkLabel</class>
         <name>label7</name>
         <x>384</x>
-        <y>396</y>
+        <y>348</y>
         <width>28</width>
         <height>24</height>
         <sensitive>True</sensitive>
@@ -2145,6 +2073,80 @@
         <label>円</label>
         <justify>GTK_JUSTIFY_LEFT</justify>
         <wrap>False</wrap>
+      </widget>
+      <widget>
+        <class>GtkLabel</class>
+        <name>label8</name>
+        <x>32</x>
+        <y>496</y>
+        <width>156</width>
+        <height>22</height>
+        <sensitive>True</sensitive>
+        <can_focus>False</can_focus>
+        <has_focus>False</has_focus>
+        <xalign>0</xalign>
+        <yalign>0.5</yalign>
+        <xpad>0</xpad>
+        <ypad>0</ypad>
+        <label>＜第三者行為固有設定＞</label>
+        <justify>GTK_JUSTIFY_LEFT</justify>
+        <wrap>False</wrap>
+      </widget>
+      <widget>
+        <class>GtkLabel</class>
+        <name>label9</name>
+        <x>32</x>
+        <y>516</y>
+        <width>156</width>
+        <height>22</height>
+        <sensitive>True</sensitive>
+        <can_focus>False</can_focus>
+        <has_focus>False</has_focus>
+        <xalign>0</xalign>
+        <yalign>0.5</yalign>
+        <xpad>0</xpad>
+        <ypad>0</ypad>
+        <label>現物給付区分初期設定</label>
+        <justify>GTK_JUSTIFY_LEFT</justify>
+        <wrap>False</wrap>
+      </widget>
+      <widget>
+        <class>GtkPandaCombo</class>
+        <name>DAISANGENBTKBN_COMBO</name>
+        <x>196</x>
+        <y>516</y>
+        <width>120</width>
+        <height>24</height>
+        <sensitive>True</sensitive>
+        <can_focus>False</can_focus>
+        <has_focus>False</has_focus>
+        <border_width>0</border_width>
+        <items></items>
+        <case_sensitive>False</case_sensitive>
+        <use_arrows>True</use_arrows>
+        <widget>
+          <class>GtkPandaEntry</class>
+          <child_name>GtkPandaCombo:entry</child_name>
+          <name>DAISANGENBTKBN</name>
+          <sensitive>True</sensitive>
+          <can_focus>True</can_focus>
+          <has_focus>False</has_focus>
+          <editable>True</editable>
+          <text_max_length>20</text_max_length>
+          <text></text>
+          <input_mode>XIM</input_mode>
+          <xim_enabled>False</xim_enabled>
+          <signal>
+            <name>changed</name>
+            <handler>entry_changed</handler>
+            <data>CHANGED</data>
+          </signal>
+          <signal>
+            <name>activate</name>
+            <handler>send_event</handler>
+            <data>ACTIVATE</data>
+          </signal>
+        </widget>
       </widget>
     </widget>
   </widget>
